// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sheet should render all props with nodes 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        class="backdrop backdropAnimationIn zoomOut"
      />
      <div
        aria-label="Sheet"
        class="wrapper hideOutline wrapperAnimationIn"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="shadowContainer"
          >
            <div
              class="Flex rowGap0 flexGrow itemsCenter justifyBetween xsDirectionRow"
            >
              <div
                class="box flexGrow"
              >
                <div
                  class="box paddingX8 paddingY8 xsDisplayFlex"
                >
                  <h1
                    class="Heading fontSize500 defaultText alignStart breakWord"
                  >
                    Sheet title
                  </h1>
                </div>
              </div>
              <div
                class="box flexNone paddingX6 paddingY7"
              >
                <button
                  aria-label="Dismiss"
                  class="parentButton"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="button tapTransition enabled"
                  >
                    <div
                      class="pog white"
                      style="height: 40px; width: 40px;"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label=""
                        class="icon darkGray iconBlock"
                        height="18"
                        role="img"
                        viewBox="0 0 24 24"
                        width="18"
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <nav />
          </div>
          <div
            class="box flexGrow overflowAuto paddingX8 paddingY8 relative"
            style="height: 100%;"
          >
            <section />
          </div>
          <div
            class="shadowContainer"
          >
            <div
              class="box paddingX8 paddingY8"
            >
              <footer />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sheet should render all props with render props 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        class="backdrop backdropAnimationIn zoomOut"
      />
      <div
        aria-label="Sheet"
        class="wrapper hideOutline wrapperAnimationIn"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="shadowContainer"
          >
            <div
              class="Flex rowGap0 flexGrow itemsCenter justifyBetween xsDirectionRow"
            >
              <div
                class="box flexGrow"
              >
                <div
                  class="box paddingX8 paddingY8 xsDisplayFlex"
                >
                  <h1
                    class="Heading fontSize500 defaultText alignStart breakWord"
                  >
                    Sheet title
                  </h1>
                </div>
              </div>
              <div
                class="box flexNone paddingX6 paddingY7"
              >
                <button
                  aria-label="Dismiss"
                  class="parentButton"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="button tapTransition enabled"
                  >
                    <div
                      class="pog white"
                      style="height: 40px; width: 40px;"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label=""
                        class="icon darkGray iconBlock"
                        height="18"
                        role="img"
                        viewBox="0 0 24 24"
                        width="18"
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <button
              type="submit"
            />
          </div>
          <div
            class="box flexGrow overflowAuto paddingX8 paddingY8 relative"
            style="height: 100%;"
          >
            <button
              type="submit"
            />
          </div>
          <div
            class="shadowContainer"
          >
            <div
              class="box paddingX8 paddingY8"
            >
              <button
                type="submit"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sheet should render animation in 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        class="backdrop backdropAnimationIn zoomOut"
      />
      <div
        aria-label="Sheet"
        class="wrapper hideOutline wrapperAnimationIn"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="box flexGrow justifyEnd marginBottom8 xsDisplayFlex"
          >
            <div
              class="absolute box flexNone paddingX6 paddingY7"
              style="z-index: 1;"
            >
              <button
                aria-label="Dismiss"
                class="parentButton"
                tabindex="0"
                type="button"
              >
                <div
                  class="button tapTransition enabled"
                >
                  <div
                    class="pog white"
                    style="height: 40px; width: 40px;"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label=""
                      class="icon darkGray iconBlock"
                      height="18"
                      role="img"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="box flexGrow overflowAuto paddingX8 paddingY8 relative"
            style="height: 100%;"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sheet should render animation out 1`] = `
<div>
  <div
    name="trap-focus"
  >
    <div
      class="container"
    >
      <div
        class="backdrop backdropAnimationOut zoomOut"
      />
      <div
        aria-label="Sheet"
        class="wrapper hideOutline wrapperAnimationOut"
        role="dialog"
        style="width: 540px;"
        tabindex="-1"
      >
        <div
          class="box flexGrow relative xsDirectionColumn xsDisplayFlex"
          style="width: 100%;"
        >
          <div
            class="box flexGrow justifyEnd marginBottom8 xsDisplayFlex"
          >
            <div
              class="absolute box flexNone paddingX6 paddingY7"
              style="z-index: 1;"
            >
              <button
                aria-label="Dismiss"
                class="parentButton"
                tabindex="0"
                type="button"
              >
                <div
                  class="button tapTransition enabled"
                >
                  <div
                    class="pog white"
                    style="height: 40px; width: 40px;"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label=""
                      class="icon darkGray iconBlock"
                      height="18"
                      role="img"
                      viewBox="0 0 24 24"
                      width="18"
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="box flexGrow overflowAuto paddingX8 paddingY8 relative"
            style="height: 100%;"
          >
            <section />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
